--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <carina_core_version>3.3.1.17</carina_core_version>
+        <carina_core_version>LATEST</carina_core_version>
         <suite>_debug</suite>
     </properties>
 
